# critical-minerals-aster

./: .gitignore  00_verify_setup.ipynb  CLAUDE.md  LICENSE  README.md  download_structures.py  environment.yml  pyproject.toml
data/: mrds.met  mrds_mcdermitt.geojson
data/structures/: bear_lodge_faults_sgmc.geojson  climax_faults.geojson  darwin_faults.geojson  goldfield_faults.geojson  jerome_faults_sgmc.geojson  jerritt_canyon_faults.geojson  marysvale_faults.geojson  mcdermitt_faults.geojson  mountain_pass_faults.geojson  oatman_faults.geojson  silver_peak_faults.geojson  steamboat_springs_faults.geojson  stillwater_faults.geojson  tonopah_faults.geojson  (+1 more)
docs/: architecture.md  implementation-phases.md  roadmap.md  structure_layers.md
figures/: index.html
notebooks/: 01_data_download.ipynb  03_classification.ipynb  04_deposit_overlay.ipynb  05_national_synthesis.ipynb
results/: results.duckdb
scripts/: _granule_inventory_all.py  _mp_granule_check.py  compute_significance.py  compute_significance_by_category.py  compute_significance_filtered.py  download_sgmc_structures.py  download_usgs_faults.py  regen_fig3.py  regen_figures_parallel.py  synthesize_national.py
sites/: bear_lodge.yaml  climax.yaml  darwin.yaml  goldfield.yaml  index.yaml  jerome.yaml  jerritt_canyon.yaml  marysvale.yaml  mcdermitt.yaml  mountain_pass.yaml  oatman.yaml  silver_peak.yaml  steamboat_springs.yaml  stillwater.yaml  tonopah.yaml  yerington.yaml
tests/: test_classification.py  test_config_paths.py  test_pipeline_snapshot.py  test_select_granule.py  test_structure.py
(+38 files in other folders)
