[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "critical-minerals-aster"
version = "0.1.0"
description = "ASTER TIR alteration mapping with MRDS validation (multi-site capable)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
